--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <body>
     <div class="page">
-      <!-- Envolva todo o conteúdo da página em um novo div com a classe da página. Lembre-se de adicionar a tag de fechamento -->
       <header class="header">
         <nav class="nav">
           <img
@@ -19,22 +18,21 @@
             alt="Triple Peaks Library Logo"
             class="nav__logo"
           />
-          <!-- Colocar links de navegação em uma lista é considerada a melhor prática para escrever códigos semânticos, porque permite que leitores de tela façam uma pausa entre cada link em vez de ler todos como se fossem uma só frase. -->
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Escolhas da Equipe</a>
+              <a class="nav__link" href="#staff-link">Escolhas da Equipe</a>
             </li>
             <li>
-              <a class="nav__link">Eventos</a>
+              <a class="nav__link" href="#events-link">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Seja um membro</a>
+              <a class="nav__link" href="#membership-link">Seja um membro</a>
             </li>
             <li>
-              <a class="nav__link">Sobre</a>
+              <a class="nav__link" href="#about-link">Sobre</a>
             </li>
             <li>
-              <a class="nav__link">Contatos</a>
+              <a class="nav__link" href="#footer-link">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -51,15 +49,88 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">Sobre a biblioteca &darr;</a>
+          <a class="header__link" href="#about-link"
+            >Sobre a biblioteca &darr;</a
+          >
           <p class="header__address">
             200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
       </header>
+      <section class="staff" id="staff-link">
+        <h2 class="staff__title">Escolhas da Equipe</h2>
+        <p class="staff__subtitle">Que nossos leitores adoram</p>
+        <ul class="staff__card">
+          <li class="card">
+            <div class="card__content">
+              <h3 class="card__title">Algoritmos: Teoria e Prática</h3>
+              <p class="card__text">
+                O nome deste livro é autoexplicativo; é uma introdução adequada
+                aos algoritmos! Introdução aos algoritmos, ou CLRS, em
+                referência aos sobrenomes dos autores, é aprofundada e abrange
+                uma variedade de algoritmos em vários capítulos independentes.
+              </p>
+              <p class="card__footer">
+                Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
+                Clifford Stein
+              </p>
+            </div>
+          </li>
 
+          <li class="card">
+            <div class="card__content">
+              <h3 class="card__title">
+                A Estrutura e Interpretação de Programas de Computador (sigla em
+                inglês, SICP)
+              </h3>
+              <p class="card__text">
+                Esse é um dos melhores livros para aprender os fundamentos da
+                programação. Apresentado pelo MIT em um de seus cursos básicos
+                de programação, o SICP é um livro de programação de uso geral
+                que usa Esquema para ilustrar vários conceitos de programação.
+              </p>
+              <p class="card__footer">
+                Harold Abelson, Gerald Jay Sussman, Julie Sussman
+              </p>
+            </div>
+          </li>
+
+          <li class="card">
+            <div class="card__content">
+              <h3 class="card__title">
+                O Codificador Limpo: Um Código de Conduta para Programadores
+                Profissionais
+              </h3>
+              <p class="card__text">
+                Compilado pelo experiente engenheiro de software e autor Robert
+                C. Martin (também conhecido como Tio Bob), este livro aborda as
+                técnicas e ferramentas do verdadeiro artesanato de software. Ele
+                explica como escrever um código limpo e demonstra como cultivar
+                a atitude de um programador profissional qualificado.
+              </p>
+              <p class="card__footer">Steve McConnell</p>
+            </div>
+          </li>
+
+          <li class="card">
+            <div class="card__content">
+              <h3 class="card__title">
+                Code Complete: Um Manual Prático de Construção de Software
+              </h3>
+              <p class="card__text">
+                Quer saber como escrever um código robusto, independentemente da
+                arquitetura por trás da linguagem de programação escolhida? Em
+                seguida, considere a leitura do livro: Code Complete: Um Manual
+                Prático de Construção de Software. Ele brange de forma geral
+                tudo relacionado a uma boa estrutura de código.
+              </p>
+              <p class="card__footer">Steve McConnell</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <main class="content">
-        <section class="events">
+        <section class="events" id="events-link">
           <div class="events__content">
             <h2 class="events__heading">Proximos eventos:</h2>
             <h3 class="events__title">
@@ -138,83 +209,7 @@
             </div>
           </div>
         </section>
-
-        <section class="staff">
-          <h2 class="staff__title">Escolhas da Equipe</h2>
-          <p class="staff__subtitle">Que nossos leitores adoram</p>
-          <ul class="staff__card">
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">Algoritmos: Teoria e Prática</h3>
-                <p class="card__text">
-                  O nome deste livro é autoexplicativo; é uma introdução
-                  adequada aos algoritmos! Introdução aos algoritmos, ou CLRS,
-                  em referência aos sobrenomes dos autores, é aprofundada e
-                  abrange uma variedade de algoritmos em vários capítulos
-                  independentes.
-                </p>
-                <p class="card__footer">
-                  Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest,
-                  Clifford Stein
-                </p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  A Estrutura e Interpretação de Programas de Computador (sigla
-                  em inglês, SICP)
-                </h3>
-                <p class="card__text">
-                  Esse é um dos melhores livros para aprender os fundamentos da
-                  programação. Apresentado pelo MIT em um de seus cursos básicos
-                  de programação, o SICP é um livro de programação de uso geral
-                  que usa Esquema para ilustrar vários conceitos de programação.
-                </p>
-                <p class="card__footer">
-                  Harold Abelson, Gerald Jay Sussman, Julie Sussman
-                </p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  O Codificador Limpo: Um Código de Conduta para Programadores
-                  Profissionais
-                </h3>
-                <p class="card__text">
-                  Compilado pelo experiente engenheiro de software e autor
-                  Robert C. Martin (também conhecido como Tio Bob), este livro
-                  aborda as técnicas e ferramentas do verdadeiro artesanato de
-                  software. Ele explica como escrever um código limpo e
-                  demonstra como cultivar a atitude de um programador
-                  profissional qualificado.
-                </p>
-                <p class="card__footer">Steve McConnell</p>
-              </div>
-            </li>
-
-            <li class="card">
-              <div class="card__content">
-                <h3 class="card__title">
-                  Code Complete: Um Manual Prático de Construção de Software
-                </h3>
-                <p class="card__text">
-                  Quer saber como escrever um código robusto, independentemente
-                  da arquitetura por trás da linguagem de programação escolhida?
-                  Em seguida, considere a leitura do livro: Code Complete: Um
-                  Manual Prático de Construção de Software. Ele brange de forma
-                  geral tudo relacionado a uma boa estrutura de código.
-                </p>
-                <p class="card__footer">Steve McConnell</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-
-        <section class="membership">
+        <section class="membership" id="membership-link">
           <h2 class="membership__title">Ser membro da biblioteca é fácil!</h2>
           <ul class="membership__steps">
             <li class="step">
@@ -269,8 +264,7 @@
             </li>
           </ul>
         </section>
-
-        <section class="about">
+        <section class="about" id="about-link">
           <h2 class="about__title">Sobre a biblioteca</h2>
           <div class="about__content">
             <p class="about__paragraph">
@@ -291,14 +285,53 @@
               livros que qualquer pessoa interessada em programação adoraria
               conhecer!
             </p>
+            <div class="about__circle"></div>
           </div>
-          <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer">
-        <!-- ----------------------------------------------------------------- -->
-        <!--      Não apague os comentários até a última etapa do projeto      -->
-        <!-- ----------------------------------------------------------------- -->
+      <footer class="footer" id="footer-link">
+        <div class="footer__columns">
+          <div class="footer__column_logo">
+            <img
+              src="images/logo-white.svg"
+              alt="footer-logo"
+              class="footer__logo"
+            />
+            <p class="footer__copyright">© 2022 Alan Douglas</p>
+          </div>
+          <div class="footer__column">
+            <div class="footer__column_content_hours">
+              <h2 class="footer__list">Horário de Funcionamento</h2>
+              <ul class="footer__column-heading">
+                <li class="footer__list-item">Dias úteis: 9h - 20h</li>
+                <li class="footer__list-item">Finais de semana: 10h às 18h</li>
+              </ul>
+            </div>
+            <div class="footer__column_content_social">
+              <h2 class="footer__list">Redes Sociais</h2>
+              <ul class="footer__column-heading">
+                <li class="footer__list-item">
+                  <a href="#" class="footer__column-link"
+                    ><img
+                      src="images/facebook_white.svg"
+                      alt="Facebook logo"
+                      class="footer__social-icon"
+                    />Facebook</a
+                  >
+                </li>
+                <li class="footer__list-item">
+                  <a href="#" class="footer__column-link"
+                    ><img
+                      src="images/instagram_white.svg"
+                      alt="Instagram logo"
+                      class="footer__social-icon"
+                    />Instagram</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
